--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Mohit Soni",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "typescript": "^5.6.3"
   },
   "dependencies": {
