--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "tsc-watch": "^6.2.0",
     "typescript": "^5.6.3"
   },
   "dependencies": {
