--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "this-is-threads-app-backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node dist/index.js",
+    "dev": "tsc-watch --onSuccess \"npm start\""
+    
   },
   "keywords": [
     "Threads",
