--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/node": "^22.7.9",
     "tsc-watch": "^6.2.0",
     "typescript": "^5.6.3"
   },
