--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Mohit Soni",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.9",
     "tsc-watch": "^6.2.0",
@@ -22,6 +23,8 @@
   },
   "dependencies": {
     "@apollo/server": "^4.11.0",
+    "apollo-server-express": "^3.13.0",
+    "body-parser": "^1.20.3",
     "express": "^4.21.1",
     "graphql": "^16.9.0"
   }
