--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@apollo/server": "^4.11.0",
     "apollo-server-express": "^3.13.0",
     "body-parser": "^1.20.3",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "graphql": "^16.9.0"
   }
