--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/axios": "^0.9.36",
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.9",
+    "prisma": "^5.21.1",
+    "ts-node": "^10.9.2",
     "tsc-watch": "^6.2.0",
     "typescript": "^5.6.3"
   },
