--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.4'
+version: '3.9'
 
 services:
   postgres:
@@ -9,9 +9,9 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=threads
-      - POSTGRES_DB=threads
+       POSTGRES_USER: postgres
+       POSTGRES_PASSWORD: threads
+       POSTGRES_DB: threads
 
 volumes:
   postgres_data:
