--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.11.0",
+    "@prisma/client": "^5.0.0",
     "apollo-server-express": "^3.13.0",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
