--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "Mohit Soni",
   "license": "ISC",
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
+    "@biomejs/biome": "1.9.4",
     "@types/axios": "^0.9.36",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
