--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "this-is-threads-app-backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/index.js",
-    "dev": "tsc-watch --onSuccess \"npm start\""
+    "clean": "rimraf dist",
+    "build": "npm run clean && tsc",
+    "start": "node dist/server.js",
+    "dev": "tsx watch src/server.ts",
+    "watch": "tsc -w",
+    "serve": "concurrently \"npm run watch\" \"wait-on dist/server.js && nodemon dist/server.js\"",
+    "lint": "biome check src",
+    "format": "biome check --write src"
   },
   "keywords": [
     "Threads",
@@ -16,23 +21,23 @@
   "license": "ISC",
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@types/axios": "^0.9.36",
-    "@types/express": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^22.7.9",
-    "prisma": "^5.21.1",
+    "@types/axios": "^0.14.4",
+    "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^22.15.2",
+    "prisma": "^6.6.0",
     "ts-node": "^10.9.2",
-    "tsc-watch": "^6.2.0",
-    "typescript": "^5.6.3"
+    "tsc-watch": "^6.2.1",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@apollo/server": "^4.11.0",
-    "@prisma/client": "^5.0.0",
+    "@apollo/server": "^4.12.0",
+    "@prisma/client": "^6.6.0",
     "apollo-server-express": "^3.13.0",
-    "body-parser": "^1.20.3",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "graphql": "^16.9.0",
+    "body-parser": "^2.2.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "graphql": "^16.11.0",
     "jsonwebtoken": "^9.0.2"
   }
 }
