--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "this-is-threads-app-backend",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "clean": "rimraf dist",
     "build": "npm run clean && tsc",
@@ -22,18 +23,24 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@types/axios": "^0.14.4",
+    "@types/cors": "^2.8.17",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.2",
+    "@types/wait-on": "^5.3.4",
+    "concurrently": "^9.1.2",
     "prisma": "^6.6.0",
+    "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "tsc-watch": "^6.2.1",
-    "typescript": "^5.8.3"
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.3",
+    "wait-on": "^8.0.3"
   },
   "dependencies": {
     "@apollo/server": "^4.12.0",
     "@prisma/client": "^6.6.0",
-    "apollo-server-express": "^3.13.0",
     "body-parser": "^2.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
